--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,6 @@ rsconnect/
 workflow_workthrough.Rproj
 
 # File associated with the report
-report/
-rda_files/
-captions_alt_text.csv
+# report/
+# rda_files/
+# captions_alt_text.csv
